<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_buy"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_sell"
        android:layout_centerInParent="true"
        android:text="@string/buy_btn" />

    <Button
        android:id="@+id/btn_sell"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/sell_btn" />

    <Button
        android:id="@+id/btn_stock"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_sell"
        android:layout_centerInParent="true"
        android:text="@string/stock_btn" />

    <Button
        android:id="@+id/btn_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_stock"
        android:layout_centerInParent="true"
        android:text="@string/password_btn" />

</RelativeLayout>