<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_stock_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/stock_title_text"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/ll_tablehead"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_stock_title"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_fallname"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/fallname_text"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/et_key"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:hint="@string/key_find"
            android:singleLine="true"
            android:visibility="gone" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@color/yellowcolor" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/amount_text"
            android:textSize="10sp" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@color/yellowcolor" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/in_price_text"
            android:textSize="10sp" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@color/yellowcolor" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/remarks_text"
            android:textSize="10sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/lv_stock"
        android:layout_below="@id/ll_tablehead"
        android:background="@color/yellowcolor" />

    <ListView
        android:id="@+id/lv_stock"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_total_select"
        android:layout_below="@+id/ll_tablehead" />

    <LinearLayout
        android:id="@+id/ll_total_select"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_today_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/today_btn" />

        <Button
            android:id="@+id/btn_month_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/month_btn" />

        <Button
            android:id="@+id/btn_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_btn" />

    </LinearLayout>
</RelativeLayout>