<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/date_text"
            android:textSize="10sp" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="fill_parent"
            android:background="@color/yellowcolor" />

        <TextView
            android:id="@+id/tv_fallname"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/fallname_text"
            android:textSize="10sp" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="fill_parent"
            android:background="@color/yellowcolor" />

        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/amount_text"
            android:textSize="10sp" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="fill_parent"
            android:background="@color/yellowcolor" />

        <TextView
            android:id="@+id/tv_out_price"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/out_price_text"
            android:textSize="10sp" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="fill_parent"
            android:background="@color/yellowcolor" />

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/total_text"
            android:textSize="10sp" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="fill_parent"
            android:background="@color/yellowcolor" />

        <TextView
            android:id="@+id/tv_remarks"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/remarks_text"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_remarks_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <EditText
            android:id="@+id/et_remarks"
            android:layout_width="800dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:inputType="text" />

        <Button
            android:id="@+id/btn_sure_remarks"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/sure_btn"
            android:textColor="@color/green"
            android:textSize="10sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:background="@color/yellowcolor" />
</LinearLayout>