<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/tv_fallname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fallname_text"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_fallname"
                android:text="@string/amount_text"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_out_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_amount"
                android:text="@string/out_price_text"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_remarks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_out_price"
                android:text="@string/remarks_text"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/et_fallname"
                android:layout_width="600dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tv_fallname"
                android:layout_toRightOf="@+id/tv_fallname" />

            <EditText
                android:id="@+id/et_amount"
                android:layout_width="600dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tv_amount"
                android:layout_toRightOf="@+id/tv_amount"
                android:inputType="number" />

            <EditText
                android:id="@+id/et_out_price"
                android:layout_width="600dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tv_out_price"
                android:layout_toRightOf="@+id/tv_out_price"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/et_remarks"
                android:layout_width="600dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tv_remarks"
                android:layout_toRightOf="@+id/tv_remarks" />

            <Button
                android:id="@+id/btn_sell"
                android:layout_width="600dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_remarks"
                android:layout_centerHorizontal="true"
                android:text="@string/sell_btn"
                android:textSize="17sp" />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>