<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:id="@+id/rl_inputpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/tv_oldpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_password_text"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/et_oldpassword"
            android:layout_width="600dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_oldpassword"
            android:layout_toRightOf="@+id/tv_oldpassword"
            android:inputType="textPassword">

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tv_newpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_oldpassword"
            android:text="@string/new_password_text"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/et_newpassword"
            android:layout_width="600dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_oldpassword"
            android:layout_toRightOf="@+id/tv_newpassword"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tv_surepassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_newpassword"
            android:text="@string/sure_password_text"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/et_surepassword"
            android:layout_width="600dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_surepassword"
            android:layout_alignRight="@+id/et_newpassword"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_setpassword"
            android:layout_width="600dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_surepassword"
            android:layout_centerInParent="true"
            android:text="@string/set_password_btn"
            android:textSize="17sp" />
    </RelativeLayout>
</RelativeLayout>